SEC-2579: Add springio-platform plugin